Fleshing out express app framework

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "author": "David Goodwin <goodwid@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.4"
+    "bcrypt": "^0.8.6",
+    "body-parser": "^1.15.1",
+    "express": "^4.13.4",
+    "jsonwebtoken": "^7.0.0",
+    "moment": "^2.13.0",
+    "mongoose": "^4.4.19",
+    "morgan": "^1.7.0"
   }
 }
