--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
     "moment": "^2.13.0",
     "mongoose": "^4.4.19",
     "morgan": "^1.7.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "eslint": "^2.10.2",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-spawn-mocha": "^2.2.2",
+    "mocha": "^2.4.5"
   }
 }
